# loom

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
docs/: architecture.md
examples/: autodiff_tour.py  bpe_explorer.py
loom/: __init__.py  __main__.py  cli.py  evaluate.py  functional.py  gradcheck.py  model.py  nn.py  optim.py  rng.py  tensor.py  tokenizer.py  train.py
loom/server/: __init__.py  app.py  schemas.py
loom/server/static/: app.js  index.html  styles.css
scripts/: attention_map.py  benchmark_generation.py  plot_history.py
tests/: test_cli.py  test_generation.py  test_gradcheck.py  test_model.py  test_nn.py  test_optim.py  test_tensor.py  test_tokenizer.py  test_train.py
